[package]
name = "unshelve"
version = "0.1.0"
edition = "2024"

[dependencies]
openstack = {version = "0.6.0", git = "https://github.com/notarius1/rust-openstack.git"}
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15.0"
#reqwest = "0.12.28"
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0.149"
chrono = "0.4"
ping = "0.7.1-beta.1"
is_sudo = "0.0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
debug = false
incremental = false
codegen-units = 1
panic = "unwind"
rpath = false

[profile.dev]
strip = "symbols"